# bar-library-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  api.yaml  configuration.yml  readme.md  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml
src/: configuration.rs  main.rs  models.rs  startup.rs  telemetry.rs
src/routes/: favorites.rs  health_check.rs  ingredients.rs  kitchen.rs  mod.rs  recipes.rs  users.rs
test_db/: Dockerfile  docker-compose.yml
test_db/sql/: 1_up.sql  2_data.sql  3_constraints.sql
testing/: build.sh  docker-compose.yml
testing/sql/: 1_up.sql  2_data.sql  3_constraints.sql
tests/api/: favorites.rs  health_check.rs  helpers.rs  ingredients.rs  kitchen.rs  main.rs  recipes.rs  users.rs
tests/setup/sql/: 1_up.sql  2_data.sql  3_constraints.sql
