[package]
name = "bar_library_api"
version = "0.1.0"
authors = ["Jake Huneau <jakehuneau@yahoo.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "bar_library_api"

[dependencies]
actix-web = "4.0.1"
bcrypt = "0.12.1"
config = "0.11"
serde = { version = "1", features = ["derive"] }
reqwest = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]