[package]
name = "bar_library_api"
version = "0.1.0"
resolver = "2"
authors = ["Jake Huneau <jakehuneau@yahoo.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "bar_library_api"

[dependencies]
actix-web = "4.0.1"
bcrypt = "0.12.1"
config = "0.11"
chrono = "0.4.15"
reqwest = "0.11"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1"
serde_json = "1"